<resources>
    <string name="app_name">OperacionesBasicas</string>
    <string name="numero1">Escribe un Numero</string>
    <string name="titutlo">Operaciones Basicas</string>
    <string name="num1">Ingresar numero</string>
    <string name="num2">Ingresar numero</string>
    <string name="suma">+</string>
    <string name="resta">-</string>
    <string name="multiplica">*</string>
    <string name="divide">/</string>
    <string name="resultado">0.0</string>
</resources>
