<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
   android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<TextView
    android:id="@+id/tvtitulo"
    android:text="@string/titutlo"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"/>

<EditText
    android:id="@+id/etnumero1"
    android:hint="@string/num1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"/>
<EditText
    android:id="@+id/etnumero2"
    android:hint="@string/num2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/linear2"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btsuma"
            android:text="@string/suma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/btresta"
            android:text="@string/resta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/btmultiplica"
            android:text="@string/multiplica"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btdivide"
            android:text="@string/divide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <TextView
        android:id="@+id/resultado"
        android:gravity="center"
        android:textSize="28dp"
        android:textColor="@color/colorPrimary"
        android:text="@string/resultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>